--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "search-bar-app",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Elia Narducci",
+    "email": "elianarducciweb@gmail.com"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
